[package]
name = "hexy"
version = "0.1.0"
license = "MIT"
authors = ["Chris Arderne <chris@rdrn.me"]
description = "doing stuff with Strava"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
h3o = { version = "0.6.2", features = ["std", "geo", "serde"] }
handlebars = "5.1.2"
polyline = "0.10.1"
reqwest = { version = "0.12.3", features = ["json"] }
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_okapi = { version = "0.8.0", features = [ "rapidoc" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.34"
url = "2.5.0"
