[package]
name = "hexy"
version = "0.1.0"
license = "MIT"
authors = ["Chris Arderne <chris@rdrn.me"]
description = "doing stuff with Strava"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.37", features = ["serde"] }
dbscan = "0.3.1"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
env_logger = "0.11.3"
geo = { version = "0.28.0", features = ["serde"] }
geo-types = "0.7.13"
geojson = "0.24.1"
h3o = { version = "0.6.2", features = ["std", "geo", "serde"] }
httpmock = "0.7.0"
log = "0.4.21"
polyline = "0.10.1"
reqwest = { version = "0.12.3", features = ["json"] }
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.34"
tokio = "1.37.0"
url = "2.5.0"
